Добавил в swagger примеры запросов
